# Powermeter-values-to-MQTT-and-Websever

./: .gitignore  CMakeLists.experimental.txt  CMakeLists.txt  Install_Python_Enviroment_forOTA.sh  README.md  clean_all.sh  esp_idf_project_configuration.json  ota_server-one-shot.py  partitions.csv  provide_ota_update.sh  sdkconfig.common  sdkconfig.esp32_chip_common  sdkconfig.esp32_dev_board_eth  sdkconfig.esp32_dev_board_wifi  sdkconfig.esp32h2_board_common  sdkconfig.esp32h2_chip_common  sdkconfig.esp32h2_dev_board  sdkconfig.esp32h2_dev_board_eth  sdkconfig.esp32h2_dev_eth  sdkconfig.esp32h2_mini_board  sdkconfig.esp32h2_mini_dev  sdkconfig.esp32h2_prod_board_eth  sdkconfig.esp32h2_prod_eth  sdkconfig.esp32s3_WaveShare_board_eth  sdkconfig.esp32s3_board_common  sdkconfig.esp32s3_chip_common  sdkconfig.esp32s3_dev_board  sdkconfig.esp32s3_dev_board_eth  sdkconfig.esp32s3_dev_board_wifi  sdkconfig.esp32s3_dev_eth  sdkconfig.esp32s3_dev_wifi  sdkconfig.project_common  toggle_project_config.sh
Others/: powermeter-icon.pptx
components/: COMPONENTS.md
components/Modbus_UART_RTU/: CMakeLists.txt  Kconfig.projbuild  Modbus_UART_RTU.c  idf_component.yml
components/NTPSync_and_localTZ/: CMakeLists.txt  Kconfig.projbuild  NTPSync_and_localTZ.c
components/OTA_mDNS/: CMakeLists.txt  Kconfig.projbuild  OTA_mDNS.c
main/: CMakeLists.txt  Kconfig.projbuild  OFF-Kconfig.experimental.projbuild  idf_component.yml  main.c
ota_update/: install_py_requirements.sh  requirements.txt
storage_at_runtime/: log_webserver.html  prm_webserver.html  webserial.html
(+21 files in other folders)
